--- a/styles.css
+++ b/styles.css
@@ -420,8 +420,8 @@ section {
 .projects .projects-box-container {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-around;
-	gap: 2rem;
+	justify-content: center;
+	gap: 1.5rem;
 	margin-top: 3rem;
 }
 
@@ -430,7 +430,7 @@ section {
 }
 
 .projects .projects-box-container .projects-box .image {
-	height: 40rem;
+	height: 25rem;
 	overflow: hidden;
 }
 
@@ -438,13 +438,15 @@ section {
 	height: 100%;
 	width: 100%;
 	object-fit: cover;
+
 }
 
 .project-content {
 	display: flex;
-	gap: .5rem;
+	gap: 1rem;
 	background-color: var(--white);
 	justify-content: space-between;
+	padding: 3px;
 }
 
 .project-info {
@@ -460,14 +462,108 @@ section {
 }
 
 .project-content i {
-	width: 7.7rem;
-	font-size: 3rem;
+	width: 4rem;
+	font-size: 2rem;
 	background-color: var(--yellow);
 	color: var(--white);
 	text-align: center;
-	line-height: 7.5rem;
+	line-height: 4rem;
 }
 
+/*contact us styling*/
+.contact {
+	background-color: var(--light-bg);
+}
+
+.row {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 3rem;
+}
+
+.map {
+	flex: 1 1 41rem;
+	width: 100%;
+}
+
+form {
+	flex: 1 1 41rem;
+	padding: 2rem;
+	box-shadow: var(--box-shadow);
+}
+
+form h3 {
+	font-size: 2.5rem;
+	padding-bottom: 1rem;
+}
+
+.form-box {
+	border: var(--border);
+	margin: .7rem 0;
+	width: 100%;
+	padding: 1.2rem 1.4rem;
+	font-size: 1.6rem;
+	color: var(--light-color);
+}
+
+.submit-btn {
+	margin-top: 20px;
+}
+
+.submit-btn a {
+	background-color: #111;
+	color: white;
+	font-size: 1.2rem;
+	padding: 10px 20px;
+}
+
+
+.logo-container {
+	/* text-align: center; */
+	padding: 20px;
+	/* background-color: #f8f8f8; */
+}
+
+/* .logo-container .heading {
+	font-size: 24px;
+	margin-bottom: 20px;
+	color: #333;
+} */
+
+.logo-slider {
+	width: 100%;
+	max-width: 1200px;
+	margin: 0 auto;
+	max-height: 200px;
+	margin-bottom: 100px;
+}
+
+.swiper-wrapper {
+	display: flex;
+}
+
+.swiper-slide {
+	flex: 1 0 auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.swiper-slide img {
+	max-width: 100%;
+	height: auto;
+	display: block;
+}
+
+.footer {
+	text-align: center;
+	padding: 20px;
+	box-shadow: var(--box-shadow);
+}
+
+.footer .credit {
+	font-size: 2rem;
+}
 
 
 /* media queries */
@@ -475,6 +571,10 @@ section {
 @media (max-width:1200px) {
 	.header {
 		padding: 1.5rem 2rem;
+	}
+
+	.logo-container .heading {
+		text-align: justify;
 	}
 
 	section {
@@ -517,6 +617,9 @@ section {
 }
 
 @media (max-width:768px) {
+	.logo-container .heading {
+		font-size: 20px;
+	}
 
 	.home .slide {
 		display: flex;
@@ -547,5 +650,10 @@ section {
 
 	.box {
 		flex: 1 1 100%;
+	}
+
+	.projects .projects-box-container .projects-box .image {
+		height: 45rem;
+		overflow: hidden;
 	}
 }
