--- a/styles.css
+++ b/styles.css
@@ -417,57 +417,75 @@ section {
 	background-color: var(--black);
 }
 
-.projects .projects-box-container {
+
+.card-container {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
-	gap: 1.5rem;
-	margin-top: 3rem;
-}
-
-.projects .projects-box-container .projects-box {
-	cursor: initial;
-}
-
-.projects .projects-box-container .projects-box .image {
-	height: 25rem;
-	overflow: hidden;
-}
-
-.projects .projects-box-container .projects-box .image img {
-	height: 100%;
+	gap: 20px;
+	max-width: 1200px;
 	width: 100%;
-	object-fit: cover;
-
 }
 
-.project-content {
+.card {
+	background-color: white;
+	border-radius: 8px;
+	box-shadow: var(--box-shadow);
+	overflow: hidden;
+	width: 100%;
+	max-width: 350px;
 	display: flex;
-	gap: 1rem;
-	background-color: var(--white);
-	justify-content: space-between;
-	padding: 3px;
+	flex-direction: column;
 }
 
-.project-info {
-	padding: 1rem 2rem;
+.card-image {
+	width: 100%;
+	height: auto;
 }
 
-.project-info h3 {
-	font-size: 1.7rem;
+.card-content {
+	padding: 20px;
 }
 
-.project-info p {
+.client-name {
+	font-size: 24px;
+	margin-bottom: 10px;
+}
+
+.card-details {
+	display: flex;
+	flex-wrap: wrap;
+	margin-bottom: 10px;
+}
+
+.detail-item {
+	width: 50%;
+	display: flex;
+	align-items: center;
+	margin-bottom: 5px;
+}
+
+.icon {
+	margin-right: 10px;
+	font-size: 18px;
+}
+
+.text {
+	font-size: 16px;
+}
+
+.know-more {
+	display: inline-block;
+	margin-top: 10px;
+	color: var(--yellow);
 	font-size: 1.5rem;
+	text-decoration: none;
+	font-weight: bold;
+
 }
 
-.project-content i {
-	width: 4rem;
-	font-size: 2rem;
-	background-color: var(--yellow);
-	color: var(--white);
-	text-align: center;
-	line-height: 4rem;
+.know-more:hover {
+	text-decoration: underline;
 }
 
 /*contact us styling*/
