--- a/home.css
+++ b/home.css
@@ -41,6 +41,8 @@ html {
 		background: var(--yellow);
 	} */
 }
+
+
 .hero {
 	position: relative;
 	width: 100%;
@@ -59,9 +61,12 @@ html {
 	position: absolute;
 	bottom: 20px;
 	left: 20px;
-	color: white;
+	color: var(--white);
 	font-size: 36px;
 	font-weight: bold;
+	background-color: var(--yellow);
+	padding: 2px;
+	border-radius: .5rem;
 }
 
 .overview {
@@ -109,7 +114,7 @@ html {
 }
 
 .phases h2 span {
-	color: #007bff;
+	color: var(--yellow);
 }
 
 .phases-grid {
@@ -132,7 +137,7 @@ html {
 .contact-link {
 	display: inline-block;
 	padding: 10px 20px;
-	background-color: #007bff;
+	background-color: var(--yellow);
 	color: white;
 	text-decoration: none;
 	font-size: 18px;
@@ -140,7 +145,7 @@ html {
 }
 
 .contact-link:hover {
-	background-color: #0056b3;
+	background-color: var(--yellow);
 }
 
 /* Responsive Design */
